--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header class="main__hero">
       <h1>Landing Page </h1>
     </header>
+    <button class='main-btn' id='main-button'> TOP </button>
     <!-- Each Section has an ID (used for the anchor) and 
     a data attribute that will populate the li node.
     Adding more sections will automatically populate nav.
